feat: Logica resulta para proveedores y facturas